# cpp-template-conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  environment.yml
_vscode/: launch.json  settings.json
src/: example.cpp
